# BackpropHiddenLayer

./: .gitignore  CMakeLists.txt  compile_flags.txt
BackpropHiddenLayer/: BackpropHiddenLayer.cpp  C++_SUBMISSION_NOTES_HOWTO  CMakeLists.txt  NeuralLayer.hpp  NeuralNet.hpp  Perceptron.hpp  Util.hpp
